--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
         <div>
             <h2>welcome to my website<br><span>Shopping Zone</span></h2>
             <div class="social-icons">
-                <a href="https://instagram.com/shopping.zoneee?utm_medium=copy_link"><i class="fab fa-instagram"></i></a>
+                <a href="https://instagram.com/shopping.zoneee?utm_medium=copy_link" target="_blank"><i class="fab fa-instagram"></i></a>
         </div>
     </section>
     <section class="cards" id="services">
