--- a/index.html
+++ b/index.html
@@ -36,6 +36,7 @@
                     <h3>Printed Necklace</h3>
                     <p>Cusstomize yours for <strong>55.000L.L</strong></p>
                 </div>
+                </div>
             </div>
             <div class="card">
                 <div class="icon">
@@ -114,7 +115,29 @@
                     <p>Cusstomize yours for <strong>80.000L.L</strong></p>
                 </div>
             </div>
-
+            <div class="card">
+                <div class="icon">
+                    <div style="text-align: center;">
+                <img src="images/batoul9.jpg" width="200" height="200" class="fa-10x">
+                    </div>
+                </div>
+                <div class="info">
+                    <h3>Starmap</h3>
+                    <p>Cusstomize yours for <strong>7$</strong></p>
+                </div>
+            </div>
+            </div>
+            <div class="card">
+                <div class="icon">
+                    <div style="text-align: center;">
+                <img src="images/batoul10.jpg" width="200" height="200" class="fa-10x">
+                    </div>
+                </div>
+                <div class="info">
+                    <h3>جذع محابس</h3>
+                    <p>Cusstomize urs Now! <strong>185.000L.L</strong></p>
+                </div>
+            </div>
         </div>
     </section>
     <section class="cardsss" id="contact">
@@ -123,7 +146,7 @@
 <div class="content">
             <div class="card">
                 <div class="icon">
-                    <i class="fab fa-instagram-square"></i>
+                    <i class="fab fa-instagram-square" ></i>
                 </div>
                 <div class="info">
                     <h3>Instagram</h3>
