--- a/index.html
+++ b/index.html
@@ -138,6 +138,20 @@
                     <p>Cusstomize urs Now! <strong>185.000L.L</strong></p>
                 </div>
             </div>
+
+            <div class="card">
+                <div class="icon">
+                    <div style="text-align: center;">
+                <img src="images/batoul11.jpg" width="200" height="200" class="fa-10x">
+                    </div>
+                </div>
+                <div class="info">
+                    <h3>Wood & plexy</h3>
+                    <p>Size 20*27  <strong>200.000L.L</strong></p>
+                </div>
+            </div>
+
+
         </div>
     </section>
     <section class="cardsss" id="contact">
